add qq version 7.6.3_1